Modify error code type in body
    Frontend: Modify interface
    Backend: Modify error send logic
    Spec: extend spec
