# backend/api/catch-all/gen/openapi/types.gen.go
@@ -3,22 +3,31 @@
 // Code generated by github.com/deepmap/oapi-codegen version v1.13.0 DO NOT EDIT.
 package openapi
 
+// Defines values for ClientErrorCode.
+const (
+	ClientErrorCodeFileNotFound      ClientErrorCode = "FileNotFound"
+	ClientErrorCodeThumbnailNotFound ClientErrorCode = "ThumbnailNotFound"
+	ClientErrorCodeUnknown           ClientErrorCode = "Unknown"
+)
+
+// Defines values for ServerErrorCode.
+const (
+	ServerErrorCodeUnknown ServerErrorCode = "Unknown"
+)
+
 // Defines values for TransactionStatus.
 const (
 	READY    TransactionStatus = "READY"
 	UPLOADED TransactionStatus = "UPLOADED"
 )
 
+// ClientErrorCode defines model for ClientErrorCode.
+type ClientErrorCode string
+
 // DownloadInfo defines model for DownloadInfo.
 type DownloadInfo struct {
 	Name string `json:"name"`
 	Url  string `json:"url"`
-}
-
-// Error defines model for Error.
-type Error struct {
-	Code    int32  `json:"code"`
-	Message string `json:"message"`
 }
 
 // FileThumbnail defines model for FileThumbnail.
@@ -31,6 +40,9 @@ type FileThumbnails struct {
 	Items []FileThumbnail `json:"items"`
 }
 
+// ServerErrorCode defines model for ServerErrorCode.
+type ServerErrorCode string
+
 // Transaction defines model for Transaction.
 type Transaction struct {
 	Id     string            `json:"id"`
@@ -40,6 +52,18 @@ type Transaction struct {
 
 // TransactionStatus defines model for TransactionStatus.
 type TransactionStatus string
+
+// ClientError defines model for ClientError.
+type ClientError struct {
+	Code    ClientErrorCode `json:"code"`
+	Message string          `json:"message"`
+}
+
+// ServerError defines model for ServerError.
+type ServerError struct {
+	Code    ServerErrorCode `json:"code"`
+	Message string          `json:"message"`
+}
 
 // UpdateTransactionJSONBody defines parameters for UpdateTransaction.
 type UpdateTransactionJSONBody struct {
